; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_21077.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_21077.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bsdi_killcode = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [65 x i8] c"[ (BSDi)*[v3.0/3.1]: system failure, by: v9[v9@realhalo.org]. ]\0A\00", align 1
@.str.1 = private unnamed_addr constant [48 x i8] c"*** no output should be seen after this point.\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"*** system failure failed.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca void (...)*, align 8
  store i32 0, i32* %1, align 4
  %3 = load i64, i64* @bsdi_killcode, align 8
  %4 = inttoptr i64 %3 to i8*
  %5 = bitcast i8* %4 to void (...)*
  store void (...)* %5, void (...)** %2, align 8
  %6 = call i32 @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  %8 = load void (...)*, void (...)** %2, align 8
  call void (...) %8()
  %9 = call i32 @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %10 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
